--- a/WebContent/views/desktop/gestion/voluntariado/capacitacion/inscripcion/registroVoluntarios.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/capacitacion/inscripcion/registroVoluntarios.zul
@@ -29,16 +29,9 @@
 						<n:label for="direccion" class="active">Dirección de la capacitación</n:label>
 						<textbox id="direccion" type="text" disabled="true" value="@bind(vm.selectedObject.fkDirectorio.direccion)"> </textbox>
 					</div>
-					
-					<button
-						sclass="teal lighten-1 waves-effect waves-light"
-						onClick="@command('buscarVoluntarios')"
-						iconSclass="fa fa-search" tooltiptext="Buscar voluntarios"
-						style="/padding: 5px 6px; background-color: #2AA4EF !important; float: center">
-					</button>
-					
+
 					<div class="row">
-						<div class="col s12">
+						<div class="input-field col s11">
 							<listbox id="tabla" height="300px" emptyMessage="No hay voluntarios registrados en la capacitación" model="@bind(vm.voluntariosInscritos)">
 								<listhead sizable="true">
 									<listheader align="center" label="Cédula"  />
@@ -52,45 +45,12 @@
 								</template>
 							</listbox>
 						</div>
-					</div>
-					
-					<!--
-					
-					<div sclass="col s5" style="padding:0px">
-						<listbox model="@load(vm.voluntarios)" emptyMessage="No hay voluntarios registrados" selectedItems="@bind(vm.voluntariosSeleccionados)" multiple="true">
-							<listhead sizable="true">
-								<listheader label="Voluntarios" />
-							</listhead>
-							<template name="model">
-								<listitem label="@load(each.fkPersona.nombre)">
-									<zscript> self.setDisabled(vm.disabledVoluntario(each)); </zscript>
-								</listitem>
-							</template>
-						</listbox>
-					</div>
-					
-					<div sclass="col s2" align="center">
-						<div sclass="row">
-							<button sclass="button-conf" iconSclass="fa fa-angle-double-right" onClick="@command('agregarVoluntario')" />
+						
+						<div class="input-field col s1" style="font-size: 2em;">
+							<button sclass="teal lighten-1 waves-effect waves-light" onClick="@command('buscarVoluntarios')" iconSclass="fa fa-search" tooltiptext="Buscar voluntarios" style="/padding: 5px 6px; background-color: #2AA4EF !important; float: center"></button>
 						</div>
-						<div sclass="row">
-							<button sclass="button-conf" iconSclass="fa fa-angle-double-left" onClick="@command('removerVoluntario')" />
-						</div>
+						
 					</div>
-
-					<div sclass="col s5" style="padding:0px">
-						<listbox model="@load(vm.voluntariosInscritos)" emptyMessage="No hay voluntarios en la capacitación" selectedItems="@bind(vm.voluntariosInscritosSeleccionados)" multiple="true">
-							<listhead sizable="true">
-								<listheader label="Voluntarios inscritos" />
-							</listhead>
-							<template name="model">
-								<listitem label="@load(each.fkPersona.nombre)" />
-							</template>
-						</listbox>
-					</div>
-					
-					-->
-					
 				</div>
 			</div>
 		</div>
