--- a/WebContent/views/desktop/gestion/voluntariado/clasificacion/listaClasificacion.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/clasificacion/listaClasificacion.zul
@@ -36,7 +36,9 @@
 								<listheader label="Clasificaciones" />
 							</listhead>
 							<template name="model">
-								<listitem label="@load(each.nombre)">
+								<listitem>
+									<listcell style="width: 10%"/>
+									<listcell label="@load(each.nombre)"/>
 									<zscript> self.setDisabled(vm.disabledClasificaciones(each)); </zscript>
 								</listitem>
 							</template>
@@ -58,7 +60,10 @@
 								<listheader label="Clasificaciones del voluntario" />
 							</listhead>
 							<template name="model">
-								<listitem label="@load(each.nombre)" />
+								<listitem>
+									<listcell style="width: 10%"/>
+									<listcell label="@load(each.nombre)"/>
+								</listitem>
 							</template>
 						</listbox>
 					</div>
