--- a/WebContent/views/desktop/gestion/voluntariado/fortalezas/listaFortalezas.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/fortalezas/listaFortalezas.zul
@@ -39,10 +39,10 @@
 								<listheader label="Fortalezas" />
 							</listhead>
 							<template name="model">
-								<listitem label="@load(each.nombre)">
-									<zscript>
-										self.setDisabled(vm.disabledFortaleza(each));
-									</zscript>
+								<listitem>
+									<listcell style="width: 10%"/>
+									<listcell label="@load(each.nombre)"/>
+									<zscript> self.setDisabled(vm.disabledFortaleza(each)); </zscript>
 								</listitem>
 							</template>
 						</listbox>
@@ -68,7 +68,10 @@
 									label="Fortalezas del voluntario" />
 							</listhead>
 							<template name="model">
-								<listitem label="@load(each.nombre)" />
+								<listitem>
+									<listcell style="width: 10%"/>
+									<listcell label="@load(each.nombre)"/>
+								</listitem>
 							</template>
 						</listbox>
 					</div>
