--- a/WebContent/views/desktop/gestion/voluntariado/voluntario/VoluntarioFormBasic.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/voluntario/VoluntarioFormBasic.zul
@@ -293,7 +293,9 @@
 											<listheader label="Profesiones" />
 										</listhead>
 										<template name="model">
-											<listitem label="@load(each.nombre)">
+											<listitem>
+												<listcell style="width: 10%"/>
+												<listcell label="@load(each.nombre)"/>
 												<zscript> self.setDisabled(vm.disabledProfesion(each)); </zscript>
 											</listitem>
 										</template>
@@ -315,7 +317,10 @@
 											<listheader label="Profesiones del voluntario" />
 										</listhead>
 										<template name="model">
-											<listitem label="@load(each.nombre)" />
+											<listitem>
+												<listcell style="width: 10%"/>
+												<listcell label="@load(each.nombre)"/>
+											</listitem>
 										</template>
 									</listbox>
 								</div>
