--- a/WebContent/views/desktop/gestion/evento/planificacion/tareas/asignacion/editTareaEventoPlanificado.zul
+++ b/WebContent/views/desktop/gestion/evento/planificacion/tareas/asignacion/editTareaEventoPlanificado.zul
@@ -7,7 +7,95 @@
 		text-align: center; margin-top: 4px; width: 93%;}
 	</style>
 	<div sclass="animated fadeInLeft">
+<div sclass="row">
+			<div sclass="col s12">
+				<div class=" col s12">
+					<div class=" row line-evento" style="margin:0px"></div>
+				</div>
+				<div class=" col s12">
+					<div sclass="row"
+						style="margin:0px;background: #FFF">
 
+						<div sclass="col s3">
+							<n:br></n:br>
+							<n:br></n:br>
+							<image class="img-responsive center-block"
+								src="/imagenes/portal/icon/icon-bingo.png" width="128px"
+								height="128px">
+							</image>
+							<n:br></n:br>
+						</div>
+						<div sclass="col s9" align="center">
+							<div sclass="col s12" align="center">
+								<label sclass="titulo-evento"
+									value="@bind(vm.selectedObject.fkEvento.nombre)">
+								</label>
+
+								<label sclass="subtitulo-evento"
+									value="@bind(vm.selectedObject.fkEvento.fkClasificadorEvento.nombre)">
+								</label>
+
+								<div sclass="row">
+									<label sclass="descripcion-evento"
+										value="@bind(vm.selectedObject.fkEvento.descripcion)">
+
+									</label>
+								</div>
+								<div sclass="row">
+									<div sclass="col s8" align="left"
+										style="padding:0px">
+
+										<label
+											sclass="info-titulo-evento">
+											Fecha:
+										</label>
+										<label
+											sclass="info-descripcion-evento" value="">
+										</label>
+										<n:br></n:br>
+										<label
+											sclass="info-titulo-evento">
+											Lugar:
+										</label>
+										<label
+											sclass="info-descripcion-evento"
+											value="@bind(vm.selectedObject.fkDirectorio.nombre)">
+										</label>
+										<n:br></n:br>
+										<label
+											sclass="info-titulo-evento">
+											Dirección:
+										</label>
+										<label
+											sclass="info-descripcion-evento"
+											value="@bind(vm.selectedObject.fkDirectorio.direccion)">
+
+										</label>
+										<n:br></n:br>
+
+									</div>
+									<div sclass="col s4">
+										<image
+											class="img-responsive center-block"
+											src="/imagenes/portal/icon/mapa.png"
+											style="width: auto;padding: 0px;margin: 0px;display: inline-block;">
+										</image>
+										<span
+											class="fa fa-search center-block"
+											style=" width: auto; margin: 0px; display: inline-block;vertical-align: bottom;color:#3b85a1">
+										</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class=" col s12">
+					<div class=" row line-evento" style="margin:0px"></div>
+				</div>
+			</div>
+		</div>
+		<separator height="20px"></separator>
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
